Bug 450359 - nsFileSpec::Truncate() expects PRInt32 as the first argument so mail may disappear. p=Hiroyuki Ikezoe <poincare@ikezoe.net>. r=bienvenu, sr=neil, approval1.8.1.18=dveditz

First patch.