mozilla/xpcom/obsolete/nsFileSpecUnix.cpp
@@ -372,7 +372,7 @@ void nsFileSpec::RecursiveCopy(nsFileSpec newDir) const
 
 
 //----------------------------------------------------------------------------------------
-nsresult nsFileSpec::Truncate(PRInt32 offset) const
+nsresult nsFileSpec::Truncate(PRUint32 offset) const
 //----------------------------------------------------------------------------------------
 {
     char* Path = nsCRT::strdup(mPath);
